# tree-sitter-vrl

./: Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
bindings/c/: tree-sitter-vrl.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_vrl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterVrl/: vrl.h
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: abort.txt  comment.txt  query.txt  return.txt  templates.txt  unary.txt
test/corpus/block/: abort_check.txt  fallibility_check.txt  fallible.txt  metadata_block_type.txt  multiple_expressions_multi_line.txt  multiple_expressions_single_line.txt  scoping.txt  single_expression.txt
test/corpus/if_statement/: condition_assigment.txt  error_predicate.txt  if_else.txt  if_else_external_assignment.txt  if_else_local_assignment.txt  if_else_object.txt  if_elseif_else.txt  if_expression.txt  if_external_assignment.txt  if_local_assignment.txt  if_new_external_assignment.txt  if_null.txt  if_resolves.txt  multiline_predicates.txt  nested_if_else.txt  newlines.txt
test/corpus/literal/: array.txt  boolean.txt  float.txt  integer.txt  null.txt  object.txt  raw_string.txt  regex.txt  string.txt  timestamp.txt
